--- a/ionic/www/templates/client/checkout.html
+++ b/ionic/www/templates/client/checkout.html
@@ -1,16 +1,31 @@
 <ion-view>
-	<ion-nav-title>Pedidos</ion-nav-title>
+	<ion-nav-title class="title">Pedidos</ion-nav-title>
 		<div class="bar bar-subheader">
+			
+			<button class="button button-clear button-icon ion-plus" ng-click="openListProducts()"></button>
+
 			<h2 class="title">Total: R$  {{total}}</h2>
+
+			<button class="button button-clear button-icon ion-trash-b" ng-click="showDelete = !showDelete"></button>
+
 		</div>
 		<ion-content class="padding has-subheader">
-			<ion-list>
-				<ion-item ng-repeat="o in items">
-					{{o.name}}
-					<span class="item-note">
-						<i class="ion ion-cash"> {{o.price}}</i>
-					</span>
+			<ion-list show-delete="showDelete">
+				<ion-item ng-repeat="o in items" ng-click="openProductDetail($index)">
+					<h2>{{o.name}}</h2>
+					<div class="row">
+						<div class="col">
+							Qtd: {{o.qtd}}
+							<br/>
+							<i class="ion ion-cash"> {{o.price}}</i>
+						</div>
+						<div class="col text-right">
+							<i class="ion ion-social-usd"> {{o.qtd * o.price}}</i>
+						</div>
+					</div>
+					<ion-delete-button class="ion ion-minus-circled" ng-click="removeIndex($index)"></ion-delete-button>
 				</ion-item>
 			</ion-list>
+			<button type="button" class="button button-assertive button-full" ng-click="save()">Fazer Pedido</button>
 		</ion-content>
 </ion-view>
