--- a/ionic/www/templates/client/checkout.html
+++ b/ionic/www/templates/client/checkout.html
@@ -6,11 +6,16 @@
 
 			<h2 class="title">Total: R$  {{total}}</h2>
 
-			<button class="button button-clear button-icon ion-trash-b" ng-click="showDelete = !showDelete" ></button>
+			<button class="button button-clear button-icon ion-trash-b" ng-click="showDelete = !showDelete" ng-class="{'button-assertive':showDelete, '': !showDelete}"></button>
 
 		</div>
 		<ion-content class="padding has-subheader">
 			<ion-list show-delete="showDelete">
+			<ion-item class="item-balanced item-icon-left" ng-show="cupom.value != null">
+				<span class="icon ion-close" ng-click="removeCupom()"></span>
+				<strong>Cupom</strong>
+				<span class="badge badge-balanced">- R$ {{cupom.value}}</span>
+			</ion-item>
 				<ion-item ng-repeat="o in items as results" ng-click="openProductDetail($index)">
 					<h2>{{o.name}}</h2>
 					<div class="row">
@@ -26,6 +31,7 @@
 					<ion-delete-button class="ion ion-minus-circled" ng-click="removeIndex($index)"></ion-delete-button>
 				</ion-item>
 			</ion-list>
+			<button type="button" class="button button-balanced button-full" ng-click="readBarCode()" ng-if="results.length > 0" ng-disabled="cupom.value != null">Adicionar Cupom</button>
 			<button type="button" class="button button-assertive button-full" ng-click="save()" ng-if="results.length > 0">Fazer Pedido</button>
 		</ion-content>
 </ion-view>
