--- a/ionic/www/templates/client/checkout_item_detail.html
+++ b/ionic/www/templates/client/checkout_item_detail.html
@@ -13,7 +13,7 @@
 
 			<label class="item item-input">
 				<span class="input-label">Quantidade</span>
-				<input type="text" placeholder="Forneça a quantidade" ng-model="product.qtd">
+				<input type="number" placeholder="Forneça a quantidade" ng-model="product.qtd">
 			</label>
 				<button type="button" class="button button-assertive button-full" ng-click="updateQtd()">Alterar quantidade</button>
 				<br/>
