--- a/ionic/www/templates/login.html
+++ b/ionic/www/templates/login.html
@@ -12,7 +12,7 @@
 					<input type="password" name="password" placeholder="Digite sua senha" ng-model="user.password" required="required"/>
 				</label>
 			</div>
-			<button type="submit" class="button button-full button-assertive">Login</button>
+			<button type="submit" class="button button-full button-assertive" ng-disabled="form.$invalid">Login</button>
 		</form>
 	</ion-content>
 </ion-view>
