$resource User, Menus, ABC

--- a/ionic/www/templates/client/checkout_successful.html
+++ b/ionic/www/templates/client/checkout_successful.html
@@ -1,4 +1,5 @@
 <ion-view>
+<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
 	<ion-nav-title class="title">Pedido realizado com sucesso</ion-nav-title>
 		<div class="bar bar-balanced bar-subheader">
 			
