--- a/ionic/www/templates/client/checkout_item_detail.html
+++ b/ionic/www/templates/client/checkout_item_detail.html
@@ -1,4 +1,5 @@
 <ion-view>
+<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
 	<ion-nav-title class="title">Produto: {{product.name}}</ion-nav-title>
 		<div class="bar bar-subheader">
 			<h2 class="title">Detalhes do produto</h2>
