--- a/ionic/www/templates/client/view_products.html
+++ b/ionic/www/templates/client/view_products.html
@@ -1,4 +1,5 @@
 <ion-view>
+<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
 	<ion-nav-title>Nossos Produtos</ion-nav-title>
 	<div class="bar bar-subheader">
 		<h2 class="title">Escolha seu produto</h2>
