--- a/ionic/www/templates/login.html
+++ b/ionic/www/templates/login.html
@@ -1,4 +1,5 @@
 <ion-view>
+<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
 	<ion-nav-title>Delivery - Login</ion-nav-title>
 	<ion-content class="padding">
 		<form name="form" ng-submit="login()">
