--- a/ionic/www/templates/login.html
+++ b/ionic/www/templates/login.html
@@ -1,6 +1,7 @@
 <ion-view>
-<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
-	<ion-nav-title>Delivery - Login</ion-nav-title>
+	<ion-nav-bar class="bar bar-positive">
+		<ion-nav-title class="title">Delivery - Login</ion-nav-title>
+	</ion-nav-bar>
 	<ion-content class="padding">
 		<form name="form" ng-submit="login()">
 			<div class="list list-inset">
