--- a/ionic/www/templates/client/checkout_successful.html
+++ b/ionic/www/templates/client/checkout_successful.html
@@ -1,6 +1,5 @@
 <ion-view>
-<ion-nav-bar class="bar bar-positive"></ion-nav-bar>
-	<ion-nav-title class="title">Pedido realizado com sucesso</ion-nav-title>
+	<ion-nav-title>Pedido realizado com sucesso</ion-nav-title>
 		<div class="bar bar-balanced bar-subheader">
 			
 			<h2 class="title">Total: R$  {{total}}</h2>
