--- a/ionic/www/templates/client/checkout.html
+++ b/ionic/www/templates/client/checkout.html
@@ -1,7 +1,5 @@
 <ion-view>
-<ion-nav-bar class="bar bar-positive">
-	<ion-nav-title class="title">Pedidos</ion-nav-title>
-</ion-nav-bar>
+	<ion-nav-title>Pedidos</ion-nav-title>
 		<div class="bar bar-subheader">
 			
 			<button class="button button-clear button-icon ion-plus" ng-click="openListProducts()"></button>
