--- a/ionic/www/templates/client/view_delivery.html
+++ b/ionic/www/templates/client/view_delivery.html
@@ -22,16 +22,43 @@
 			</ion-item>
 		</ion-list>
 		<ui-gmap-google-map center="map.center" zoom="map.zoom" bounds="map.bounds">
-			<ui-gmap-marker 
-			idkey="o.id"
-			options="o.options"
-			coords="o.coords"
-			ng-repeat="o in markers"> 
-				
-			</ui-gmap-marker>
+
+			<ui-gmap-map-control 
+			template="button-descentralize.html" 
+			position="top-right" 
+			index="-1"
+			controller="CvdDescentralize">
+			</ui-gmap-map-control>
+			
+			<ui-gmap-map-control 
+			template="button-reload.html" 
+			position="top-right" 
+			index="-1"
+			controller="CvdReload">
+			</ui-gmap-map-control>
+		
+			<ui-gmap-markers 
+			models="markers"
+			options="'options'"
+			coords="'coords'"
+			fit="map.fit"> 	
+			</ui-gmap-markers>
+		
 		</ui-gmap-google-map>
 	</ion-content>
 </ion-view>
+
+<script id="button-descentralize.html" type="text/ng-template">
+	<button class="button button-stable" ng-click="fit()">
+		<i class="ion" ng-class="{'ion-android-bicycle':!map.fit, 'ion-stop':map.fit}"></i>
+	</button>
+</script>
+
+<script id="button-reload.html" type="text/ng-template">
+	<button class="button button-stable" ng-click="reload()">
+		<i class="ion ion-refresh"></i>
+	</button>
+</script>
 
 <style>
 	.angular-google-map-container{
